Add multiple manual transactions
